app/assets/stylesheets/custom.css.scss
.one-third, .two-thirds {
  img {
    max-width: 100%;
    border: 1px solid #EAEAEA;
    padding: 2px;
  }
}

.lookup {
  position: fixed;
  background-color: #fff;
  padding: 0;
  margin-top: 1em;
  display: none;
  overflow: overflow;
  text-align: center;
  left: 0;
  bottom: 0;
  width: 100%;
  border-top: 1px solid #eee;

  #close-btn {
    display: block;
  }

  input {
    margin-bottom: 1em;
    width: 100%;
    border: 0;
    font-size: 16px;
    border-bottom: 1px dashed gray;

    &:focus {
      -webkit-box-shadow: 0;
      -moz-box-shadow: 0;
      box-shadow: 0;
      outline: none;
    }
  }

  #description {
    margin-top: 0.5em;
    font-size: 14px;
    text-align: center;
  }

  #buttons {
    text-align: center;

    span {
      width: 25px;
      display: inline-block;
      text-align: center;
      border: 1px solid black;
      cursor: pointer;
    }

    span.s6 {
      background-color: #CFD2D9;
    }
  }

  #links {
    text-align: center;
    font-size: 12px;
    margin-top: 0.5em;

    a {
      display: inline-block;
      cursor: pointer;
      border-color: gray;

      &:hover {
        border-color: black;
      }
    }
  }

  h4 {
    font-size: 1.5em;
    margin-bottom: 0;
  }
}

span.s0 { background-color: #FB5A5D; }
span.s1 { background-color: #F7A175; }
span.s2 { background-color: #FDE499; }
span.s3 { background-color: #D3F2BC; }
span.s4 { background-color: #DFF2FA; }
span.s5 { background-color: inherit; }
span.s6 { background-color: inherit; }

.word { cursor: pointer; }

.container {
  max-width: 800px; }
.docs-section {
  padding: 4rem 0;
  margin-bottom: 0; 
  margin-top: 3rem; }
.docs-header {
  text-transform: uppercase;
  font-size: 1.4rem;
  letter-spacing: .2rem;
  font-weight: 600; }

.navbar,
.navbar-spacer {
  width: 100%;
  background: #fff;
  z-index: 99;
  border-top: 1px solid #eee;
  border-bottom: 1px solid #eee; }
.navbar-spacer {
  display: none; }
.navbar > .container {
  width: 100%; }
.navbar-list {
  list-style: none;
  margin-bottom: 0; }
.navbar-item {
  position: relative;
  margin-bottom: 0; }
.navbar-logo {
  display: none; }
.navbar-link {
  text-transform: uppercase;
  font-size: 11px;
  font-weight: 600;
  letter-spacing: .2rem;
  margin-right: 35px;
  text-decoration: none;
  line-height: 6.5rem;
  color: #222; }
.navbar-link.active {
  color: #33C3F0; }
.navbar-spacer {
  display: block; }
/* Re-overiding the width 100% declaration to match size of % based container */
.navbar > .container {
  width: 80%; }

/* Larger than phone */
@media (min-width: 550px) {
  .docs-section {
    padding: 6rem 0; }

  .lookup {
    left: auto;
    bottom: auto;
    width: auto;
    padding: 0 0.5em;
    border-top: 0;

    #close-btn {
      display: none;
    }
  }
}

/* Larger than tablet */
@media (min-width: 750px) {
  /* Navbar */
  .navbar + .docs-section {
    border-top-width: 0; }
  .navbar,
  .navbar-spacer {
    width: 100%;
    height: 6.5rem;
    background: #fff;
    z-index: 99;
    border-top: 1px solid #eee;
    border-bottom: 1px solid #eee; }
  .navbar-spacer {
    display: none; }
  .navbar > .container {
    width: 100%; }
  .navbar-list {
    list-style: none;
    margin-bottom: 0; }
  .navbar-item {
    position: relative;
    float: left;
    margin-bottom: 0; }
  .navbar-logo {
    height: 4rem;
    vertical-align: middle;
    padding: 1rem 0;
    margin-right: 2rem; }
  .navbar-link {
    text-transform: uppercase;
    font-size: 11px;
    font-weight: 600;
    letter-spacing: .2rem;
    margin-right: 35px;
    text-decoration: none;
    line-height: 6.5rem;
    color: #222; }
  .navbar-link.active {
    color: #33C3F0; }
  .navbar {
    position: fixed;
    top: 0;
    left: 0; }
  .navbar-spacer {
    display: block; }
  /* Re-overiding the width 100% declaration to match size of % based container */
  .navbar > .container {
    width: 80%; }
}

